# WaveEquation

./: .gitignore  CMakeLists.txt  README.md
include/: Field.h
src/: CMakeLists.txt  Field.cpp  Field.h  main.cpp
